--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<head>
+  <title>Elias Backe Home</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
 
-<html>
-
-  <head>
-    <title>The Blooooo</title>
-  </head>
-
-
-  <body>
-    <img src="TheBloooooLogo.png" width = "30%">
-    <h1>The Blooooo</h1>
-    <h2>Home</h2>
-
-    <h3>Links:</h1>
-    <p><a href="portfolio.html">Portfolio</a></p>
-
-  </body>
+<body>
+  <img src="image.png">
+  <h1>Elias Backe</h1>
+  <h2>Home</h2>
+  <div style="text-align:center">    
+    <a href="https://github.com/TheBl00000">Github</a>
+    <a href="/portfolio.html">Portfolio</
+  </div>
+</body>
 
 </html>
