--- a/portfolio.html
+++ b/portfolio.html
@@ -1,24 +1,10 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<head>
+  <title>Elias Backe Portfolio</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
 
-<html>
-
-  <head>
-    <title>The Blooooo</title>
-  </head>
-
-
-  <body>
-    <img src="TheBloooooLogo.png" width = "30%">
-    <h1>The Blooooo</h1>
-    
-    <h2>Portfolio</h2>
-
-    <h3>Ceasar Cipher</h1>
-    <p>An encryption and decryption tool</p>
-    <p><a href = "https://replit.com/@EliasBacke/Ceasar-Cipher">Link</a></p>
-    <p><a href = "index.html">Home</a></p>
-    
-
-  </body>
-
-</html>
+<body>
+  <img src="image.png">
+  <h1>Elias Backe</h1>
+  <h2>Portfolio</h2>
+</body>
