--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  <img src="image.png">
+  <img src="e.jpeg">
   <h1>Elias Backe</h1>
   <h2>Home</h2>
   <div style="text-align:center">    
